# codeporting-native-cs2cpp

./: LICENSE  README.md  template.porter.config
ComplexConsoleApp/ComplexConsoleApp/: ComplexConsoleApp.csproj
ComplexConsoleApp/LibraryA/: LibraryA.csproj  LibraryA.porter.config
ComplexConsoleApp/LibraryB/: ClassBImpl.cs
ComplexLibrary/CommonLibrary/: CommonLibrary.csproj  CommonLibrary.porter.config
ComplexLibrary/ComplexLibrary/: ComplexLibrary.csproj
ComplexNUnitTest/: ComplexNUnitTest.sln
ComplexNUnitTest/BaseLibrary/: BaseLibrary.csproj
ComplexNUnitTest/BaseLibrary/Utils/: ValueHelper.cs
ComplexNUnitTest/CommonLibrary/: BaseInterfaceSimplImpl.cs
ComplexNUnitTest/CommonLibrary/Helpers/: ValueProvider.cs
ComplexNUnitTest/ComplexNUnitTest/: ComplexNUnitTest.csproj  ComplexNUnitTest.porter.config  ComplexTest.cs
ComplexNUnitTest/LibraryB/: LibraryB.porter.config
DependentConsoleApp/: DependentConsoleApp.porter.config
DependentConsoleApp/CommonLib/: SomeClass.cs
DependentConsoleApp/DependentConsoleApp/: DependentConsoleApp.csproj  DependentConsoleApp.porter.config
DependentLibrary/: DependentLibrary.sln
DependentLibrary/DependentLibrary/: DependentLibrary.csproj  DependentLibrary.porter.config  SomeOtherClass.cs
DependentNUnitTest/: DependentNUnitTest.sln
DependentNUnitTest/CommonLib/: CommonLib.csproj  SomeClass.cs
DependentNUnitTest/DependentNUnitTest/: DependentNUnitTest.porter.config  DependentTest.cs
ExampleProjects/ComplexConsoleApp/: ComplexConsoleApp.porter.config  ComplexConsoleApp.sln
ExampleProjects/ComplexConsoleApp/BaseLibrary/: IBaseInterface.cs
ExampleProjects/ComplexConsoleApp/CommonLibrary/: CommonLibrary.csproj
ExampleProjects/ComplexConsoleApp/ComplexConsoleApp/: ComplexConsoleApp.csproj  ComplexConsoleApp.porter.config  Program.cs
ExampleProjects/ComplexConsoleApp/LibraryA/: ClassAImpl.cs  LibraryA.porter.config
ExampleProjects/ComplexConsoleApp/LibraryB/: LibraryB.csproj  LibraryB.porter.config
ExampleProjects/ComplexLibrary/: ComplexLibrary.sln
ExampleProjects/ComplexLibrary/BaseLibrary/: BaseLibrary.csproj  IBaseInterface.cs
ExampleProjects/ComplexLibrary/CommonLibrary/: BaseInterfaceSimplImpl.cs  CommonLibrary.porter.config
ExampleProjects/ComplexLibrary/ComplexLibrary/: SomeClass.cs  (+2 more)
ExampleProjects/ComplexNUnitTest/: ComplexNUnitTest.porter.config  ComplexNUnitTest.sln
ExampleProjects/DependentConsoleApp/: DependentConsoleApp.porter.config  DependentConsoleApp.sln
ExampleProjects/DependentLibrary/: DependentLibrary.sln
ExampleProjects/DependentNUnitTest/: DependentNUnitTest.porter.config  DependentNUnitTest.sln
ExampleProjects/SimpleConsoleApp/: SimpleConsoleApp.cs  SimpleConsoleApp.csproj  SimpleConsoleApp.porter.config  SimpleConsoleApp.sln
ExampleProjects/SimpleLibrary/: SimpleLibrary.cs  SimpleLibrary.csproj  SimpleLibrary.porter.config
ExampleProjects/SimpleNUnitTest/: SimpleNUnitTest.cs  SimpleNUnitTest.csproj  SimpleNUnitTest.porter.config  SimpleNUnitTest.sln
PortingProjectsExamples/DependentNUnitTest/: DependentNUnitTest.porter.config
PortingProjectsExamples/SimpleLibrary/: SimpleLibrary.cs
SimpleConsoleApp/: SimpleConsoleApp.cs  SimpleConsoleApp.csproj  SimpleConsoleApp.porter.config  SimpleConsoleApp.sln
SimpleLibrary/: SimpleLibrary.cs  SimpleLibrary.sln
qt_helpers/: CMakeLists.txt  README.md
qt_helpers/include/: qtcorehelpers.h  qtguihelpers.h
qt_helpers/tests/: test_qtcorehelpers.cpp  test_qtguihelpers.cpp
qtcreator_debugging_helpers/: CMakeLists.txt  README.md  asposetypes.py  examples.cpp
(+25 files in other folders)
